Add /bottle until command, add max quantity, fix integer overflow